--- a/index.html
+++ b/index.html
@@ -20,10 +20,12 @@
     />
 
     <!--font awesome icon-->
-    <script
+    <!-- <script
       src="https://kit.fontawesome.com/6cea1e7bdb.js"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
+
+    <script src="script/fontawesome.js" crossorigin="anonymous"></script>
 
     <!-- Bootstrap Css -->
     <link
