added new files

--- a/index.html
+++ b/index.html
@@ -1068,6 +1068,44 @@
               data-aos="flip-left"
               data-aos-easing="ease-out-cubic"
             >
+              <a target="_blank" href="https://www.altaroca.com.ph/">
+                <img src="assets/altaroca.png" alt=""
+              /></a>
+              <br />
+              <h6>Altaroca Mountain Resort Antipolo Website</h6>
+            </div>
+          </div>
+
+          <div class="timeline-row">
+            <div
+              class="timeline-time"
+              data-aos="zoom-in-up"
+              data-aos-duration="1000"
+            ></div>
+            <div
+              class="timeline-content"
+              data-aos="flip-left"
+              data-aos-easing="ease-out-cubic"
+            >
+              <a target="_blank" href="https://www.cshub.com.ph/">
+                <img src="assets/employee_hub.png" alt=""
+              /></a>
+              <br />
+              <h6>Classic Savory Inventory Management System (Employee Hub)</h6>
+            </div>
+          </div>
+
+          <div class="timeline-row">
+            <div
+              class="timeline-time"
+              data-aos="zoom-in-up"
+              data-aos-duration="1000"
+            ></div>
+            <div
+              class="timeline-content"
+              data-aos="flip-left"
+              data-aos-easing="ease-out-cubic"
+            >
               <a target="_blank" href="https://www.wccaviation.com/">
                 <img src="assets/atc.png" alt=""
               /></a>
@@ -1160,6 +1198,36 @@
 
         <div class="container project-mobile">
           <div class="row">
+            <div class="col-md-6" data-aos="flip-left" data-aos-duration="1000">
+              <div class="box">
+                <img src="assets/altaroca.png" alt="" />
+                <div class="box-body">
+                  <h6 class="box-body-h6">
+                    Altaroca Mountain Resort Antipolo Website
+                  </h6>
+
+                  <!-- <a class="btn btn-secondary" href=""
+                    >View Here<i class="fa-solid fa-angles-right ml-2"></i
+                  ></a> -->
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6" data-aos="flip-left" data-aos-duration="1000">
+              <div class="box">
+                <img src="assets/employee_hub.png" alt="" />
+                <div class="box-body">
+                  <h6 class="box-body-h6">
+                    Classic Savory Inventory Management System (Employee Hub)
+                  </h6>
+
+                  <!-- <a class="btn btn-secondary" href=""
+                    >View Here<i class="fa-solid fa-angles-right ml-2"></i
+                  ></a> -->
+                </div>
+              </div>
+            </div>
+
             <div class="col-md-6" data-aos="flip-left" data-aos-duration="1000">
               <div class="box">
                 <img src="assets/atc.png" alt="" />
