new added files

--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
                 data-aos-duration="2000"
                 class="display-5"
               >
-                I'm Jeferson <span class="last_name_">Borras</span>
+                <span class="last_name_">I'm </span> Jeferson Borras
               </h1>
               <h1 class="Typing" data-aos="fade-right" data-aos-duration="1000">
                 I am <span class="auto-type"></span>
@@ -1068,6 +1068,25 @@
               data-aos="flip-left"
               data-aos-easing="ease-out-cubic"
             >
+              <a target="_blank" href="https://www.worldcitimedicalcenter.com/">
+                <img src="assets/WCMC WEBSITE.png" alt=""
+              /></a>
+              <br />
+              <h6>World Citi Medical Center Website</h6>
+            </div>
+          </div>
+
+          <div class="timeline-row">
+            <div
+              class="timeline-time"
+              data-aos="zoom-in-up"
+              data-aos-duration="1000"
+            ></div>
+            <div
+              class="timeline-content"
+              data-aos="flip-left"
+              data-aos-easing="ease-out-cubic"
+            >
               <a target="_blank" href="https://www.altaroca.com.ph/">
                 <img src="assets/altaroca.png" alt=""
               /></a>
@@ -1198,6 +1217,19 @@
 
         <div class="container project-mobile">
           <div class="row">
+            <div class="col-md-6" data-aos="flip-left" data-aos-duration="1000">
+              <div class="box">
+                <img src="assets/WCMC WEBSITE.png" alt="" />
+                <div class="box-body">
+                  <h6 class="box-body-h6">World Citi Medical Center Website</h6>
+
+                  <!-- <a class="btn btn-secondary" href=""
+                    >View Here<i class="fa-solid fa-angles-right ml-2"></i
+                  ></a> -->
+                </div>
+              </div>
+            </div>
+
             <div class="col-md-6" data-aos="flip-left" data-aos-duration="1000">
               <div class="box">
                 <img src="assets/altaroca.png" alt="" />
